fixes spacing between save button and bottom line of form on landing page

--- a/client/public/css/form.css
+++ b/client/public/css/form.css
@@ -201,6 +201,11 @@ input[type="date"]::-webkit-inner-spin-button{
 
 
 /* --- SUBMIT BUTTON - START --- */
+
+/* .save-container {
+  margin-bottom: 22px;
+} */
+
 .button-container {
   position: absolute;
   clear: both;
