--- a/client/public/css/style.css
+++ b/client/public/css/style.css
@@ -139,7 +139,7 @@ color: #ff5e62
   font: helvetica;
   font-weight: bold;
   padding: 10px 20px;
-  margin: 5px 5px 5px 0px;
+  margin: 23px 5px 5px 0px;
   text-transform: uppercase;
 }
 .save-button::after {
